{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 33,
  "lineage": "e9bcd538-d5e5-32b0-4820-2a263ffdcce2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-449605b8",
            "domain": "vpc",
            "id": "eipalloc-07200887591ab0b68",
            "network_interface": "eni-003b2cd2740b1db88",
            "private_dns": "ip-10-0-1-243.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.243",
            "public_dns": "ec2-13-251-137-125.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.137.125",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ami",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e820d9e86a7efa3c",
            "arn": "arn:aws:ec2:ap-southeast-1:170831088255:instance/i-004427d43710e2928",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-004427d43710e2928",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "july",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ce238e5e20030202",
            "private_dns": "ip-10-0-1-228.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0614951dd8b7e75af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01671919a8a08c91d",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d60f24c857a03f75"
            ]
          },
          "depends_on": [
            "aws_subnet.public-subnet-aza"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08e5434a1e9d7feaa",
            "owner_id": "170831088255",
            "tags": {
              "Description": "new Internet Gateway",
              "Name": "new-dev-internet-gateway"
            },
            "vpc_id": "vpc-0a89b14c2c334a0ad"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07200887591ab0b68",
            "id": "nat-03eb05e46c6f7474d",
            "network_interface_id": "eni-003b2cd2740b1db88",
            "private_ip": "10.0.1.243",
            "public_ip": "13.251.137.125",
            "subnet_id": "subnet-01671919a8a08c91d",
            "tags": {
              "Description": "new NAT Gateway",
              "Name": "new-dev-nat-gateway"
            }
          },
          "depends_on": [
            "aws_eip.default",
            "aws_internet_gateway.default",
            "aws_subnet.public-subnet-aza"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c0a1342de5c95916",
            "owner_id": "170831088255",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-03eb05e46c6f7474d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "new Private Route Table",
              "Name": "new-dev-private-route_table"
            },
            "vpc_id": "vpc-0a89b14c2c334a0ad"
          },
          "depends_on": [
            "aws_nat_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aa07e8f236ee1733",
            "owner_id": "170831088255",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e5434a1e9d7feaa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "new Public Route Table",
              "Name": "new-dev-public-route_table"
            },
            "vpc_id": "vpc-0a89b14c2c334a0ad"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_private_aza",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077ddb48139932568",
            "route_table_id": "rtb-0c0a1342de5c95916",
            "subnet_id": "subnet-096bdcd7c2e56b7a7"
          },
          "depends_on": [
            "aws_route_table.private_rt",
            "aws_subnet.private-subnet-aza"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_public_aza",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0143c541422e1bfd2",
            "route_table_id": "rtb-0aa07e8f236ee1733",
            "subnet_id": "subnet-01671919a8a08c91d"
          },
          "depends_on": [
            "aws_route_table.public_rt",
            "aws_subnet.public-subnet-aza"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:170831088255:security-group/sg-0c48c24a89a3de9e1",
            "description": "Public Web Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c48c24a89a3de9e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public web SG",
            "name_prefix": null,
            "owner_id": "170831088255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "new Public Security Group",
              "Name": "new-dev-pub-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a89b14c2c334a0ad"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-aza",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:170831088255:subnet/subnet-096bdcd7c2e56b7a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-096bdcd7c2e56b7a7",
            "map_public_ip_on_launch": false,
            "owner_id": "170831088255",
            "tags": {
              "Description": "new Internet Gateway",
              "Name": "new-dev-private-subnet-azb"
            },
            "vpc_id": "vpc-0a89b14c2c334a0ad"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-aza",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:170831088255:subnet/subnet-01671919a8a08c91d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01671919a8a08c91d",
            "map_public_ip_on_launch": false,
            "owner_id": "170831088255",
            "tags": {
              "Description": "new Internet Gateway",
              "Name": "new-dev-public-subnet-aza"
            },
            "vpc_id": "vpc-0a89b14c2c334a0ad"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:170831088255:vpc/vpc-0a89b14c2c334a0ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00fc38a9ca0f088a1",
            "default_route_table_id": "rtb-00fd5eaa75487bd17",
            "default_security_group_id": "sg-0d60f24c857a03f75",
            "dhcp_options_id": "dopt-45406e22",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a89b14c2c334a0ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00fd5eaa75487bd17",
            "owner_id": "170831088255",
            "tags": {
              "Description": "new VPC",
              "Name": "dev-vpc-new"
            }
          }
        }
      ]
    }
  ]
}